--- a/yoga/йогаа.html
+++ b/yoga/йогаа.html
@@ -13,7 +13,7 @@
         <td>
             <ul>
                 <li><a href="#history"><b>История йоги</b></a></li>
-                <li><a href="hhttps://polyalip.github.io/syte1/yoga/основные_виды_йоги.html#types" target="_blank">Основные виды йоги</a></li>
+                <li><a href="hhttps://polyalip.github.io/syte1/yoga/основные_виды_йоги.html" target="_blank">Основные виды йоги</a></li>
                 <li><a href="http://localhost:63342/pythonProject/%D0%BC%D0%BE%D0%B9%20%D1%81%D0%B0%D0%B9%D1%82/%D0%B0%D1%81%D0%B0%D0%BD%D1%8B.html?_ijt=1om8le449fjknr317k2mndu99o&_ij_reload=RELOAD_ON_SAVE#asan" target="_blank">Основные асаны</a></li>
                 <li><a href="http://localhost:63342/pythonProject/%D0%BC%D0%BE%D0%B9%20%D1%81%D0%B0%D0%B9%D1%82/%D0%A6%D0%B5%D0%BB%D0%B8%20%D0%B8%20%D1%81%D1%82%D1%83%D0%BF%D0%B5%D0%BD%D0%B8%20%D0%B9%D0%BE%D0%B3%D0%B8.html?_ijt=b9opvur5etb893fj1tkfps6n3j&_ij_reload=RELOAD_ON_SAVE#steps" target="_blank">Цели и ступени йоги</a></li>
                 <li><a href="http://localhost:63342/pythonProject/%D0%BC%D0%BE%D0%B9%20%D1%81%D0%B0%D0%B9%D1%82/%D1%84%D0%BE%D1%80%D0%BC%D1%8B.html?_ijt=p558l9pjnc4rje76bbq7ccgidj&_ij_reload=RELOAD_ON_SAVE#table">Формы для записи на занятие и улучшения обслуживания</a></li>
