--- a/yoga/main.html
+++ b/yoga/main.html
@@ -12,11 +12,11 @@
     <tr>
         <td>
             <ul>
-                <li><a href="#history"><b>История йоги</b></a></li>
+                <li><a href="https://polyalip.github.io/syte1/yoga/main.html#history"><b>История йоги</b></a></li>
                 <li><a href="https://polyalip.github.io/syte1/yoga/types.html#types" target="_blank">Основные виды йоги</a></li>
                 <li><a href="https://polyalip.github.io/syte1/yoga/asans.html#asan" target="_blank">Основные асаны</a></li>
-                <li><a href="http://localhost:63342/pythonProject/%D0%BC%D0%BE%D0%B9%20%D1%81%D0%B0%D0%B9%D1%82/%D0%A6%D0%B5%D0%BB%D0%B8%20%D0%B8%20%D1%81%D1%82%D1%83%D0%BF%D0%B5%D0%BD%D0%B8%20%D0%B9%D0%BE%D0%B3%D0%B8.html?_ijt=b9opvur5etb893fj1tkfps6n3j&_ij_reload=RELOAD_ON_SAVE#steps" target="_blank">Цели и ступени йоги</a></li>
-                <li><a href="https://polyalip.github.io/syte1/yoga/формы.html#table">Формы для записи на занятие и улучшения обслуживания</a></li>
+                <li><a href="https://polyalip.github.io/syte1/yoga/steps.html#steps" target="_blank">Цели и ступени йоги</a></li>
+                <li><a href="https://polyalip.github.io/syte1/yoga/forms.html#table">Формы для записи на занятие и улучшения обслуживания</a></li>
             </ul>
         </td>
     </tr>
