--- a/yoga/forms.html
+++ b/yoga/forms.html
@@ -10,11 +10,11 @@
         <td>
 <h3>Навигация</h3>
     <ul>
-        <li><a href="http://localhost:63342/pythonProject/%D0%BC%D0%BE%D0%B9%20%D1%81%D0%B0%D0%B9%D1%82/%D0%B9%D0%BE%D0%B3%D0%B0%D0%B0.html?_ijt=jia794cbvavgla6iatvtu9k2uv&_ij_reload=RELOAD_ON_SAVE#history">История йоги</a></li>
-        <li><a href="http://localhost:63342/pythonProject/%D0%BC%D0%BE%D0%B9%20%D1%81%D0%B0%D0%B9%D1%82/%D0%BE%D1%81%D0%BD%D0%BE%D0%B2%D0%BD%D1%8B%D0%B5%20%D0%B2%D0%B8%D0%B4%D1%8B%20%D0%B9%D0%BE%D0%B3%D0%B8.html?_ijt=m8hft0u49t63lr9i67jpiqsph8&_ij_reload=RELOAD_ON_SAVE#types" target="_blank">Основные виды йоги</a></li>
-        <li><a href="http://localhost:63342/pythonProject/%D0%BC%D0%BE%D0%B9%20%D1%81%D0%B0%D0%B9%D1%82/%D0%B0%D1%81%D0%B0%D0%BD%D1%8B.html?_ijt=1om8le449fjknr317k2mndu99o&_ij_reload=RELOAD_ON_SAVE#asan" target="_blank">Основные асаны</a></li>
-        <li><a href="http://localhost:63342/pythonProject/%D0%BC%D0%BE%D0%B9%20%D1%81%D0%B0%D0%B9%D1%82/%D0%A6%D0%B5%D0%BB%D0%B8%20%D0%B8%20%D1%81%D1%82%D1%83%D0%BF%D0%B5%D0%BD%D0%B8%20%D0%B9%D0%BE%D0%B3%D0%B8.html?_ijt=b9opvur5etb893fj1tkfps6n3j&_ij_reload=RELOAD_ON_SAVE#steps" target="_blank">Цели и ступени йоги</a></li>
-        <li><a href="http://localhost:63342/pythonProject/%D0%BC%D0%BE%D0%B9%20%D1%81%D0%B0%D0%B9%D1%82/%D1%84%D0%BE%D1%80%D0%BC%D1%8B.html?_ijt=p558l9pjnc4rje76bbq7ccgidj&_ij_reload=RELOAD_ON_SAVE#table"><b>Формы для записи на занятие и улучшения обслуживания</b></a></li>
+        <li><a href="https://polyalip.github.io/syte1/yoga/main.html#history">История йоги</a></li>
+        <li><a href="https://polyalip.github.io/syte1/yoga/types.html#types" target="_blank">Основные виды йоги</a></li>
+        <li><a href="https://polyalip.github.io/syte1/yoga/asans.html#asan" target="_blank">Основные асаны</a></li>
+        <li><a href="https://polyalip.github.io/syte1/yoga/steps.html#steps" target="_blank">Цели и ступени йоги</a></li>
+        <li><a href="https://polyalip.github.io/syte1/yoga/forms.html#table"><b>Формы для записи на занятие и улучшения обслуживания</b></a></li>
     </ul>
         </td>
     </tr>
