--- a/yoga/steps.html
+++ b/yoga/steps.html
@@ -13,7 +13,7 @@
        <li><a href="https://polyalip.github.io/syte1/yoga/main.html#history">История йоги</a></li>
         <li><a href="https://polyalip.github.io/syte1/yoga/types.html#types" target="_blank">Основные виды йоги</a></li>
         <li><a href="https://polyalip.github.io/syte1/yoga/asans.html#asan" target="_blank">Основные асаны</a></li>
-        <li><a href="https://polyalip.github.io/syte1/yoga/steps.html#steps" target="_blank"><b>Цели и ступени йоги</b<></a></li>
+        <li><a href="https://polyalip.github.io/syte1/yoga/steps.html#steps" target="_blank"><b>Цели и ступени йоги</b></a></li>
         <li><a href="https://polyalip.github.io/syte1/yoga/forms.html#table">Формы для записи на занятие и улучшения обслуживания</a></li>
     </ul>
         </td>
