--- a/yogastudio/syte.html
+++ b/yogastudio/syte.html
@@ -41,7 +41,7 @@
     </header>
     <hr class="hr">
     <section>
-        <h1 class="head">Йога-студия Motion</h1>
+        <a href="https://www.consultant.ru/document/cons_doc_LAW_5142/" class="hea"><h1 class="head">Йога-студия Motion</h1></a>
         <div class="car">
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
