--- a/yogastudio/syte.html
+++ b/yogastudio/syte.html
@@ -54,13 +54,13 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="photos/yg1.jpg" class="d-block w-100" alt="yg1">
+                        <img src="photos/yg1.jpg" title="yoga" class="d-block w-100" alt="yg1">
                     </div>
                     <div class="carousel-item">
-                        <img src="photos/yg2.jpg" class="d-block w-100" alt="yg2">
+                        <img src="photos/yg2.jpg" title="yoga" class="d-block w-100" alt="yg2">
                     </div>
                     <div class="carousel-item">
-                        <img src="photos/yg3.jpeg" class="d-block w-100" alt="yg3">
+                        <img src="photos/yg3.jpeg" title="yoga" class="d-block w-100" alt="yg3">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -83,7 +83,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-6">
-                        <img src="photos/studio.jpg" class="ph">
+                        <img src="photos/studio.jpg" title="studio" class="ph">
                     </div>
                     <div class="col-lg-6">
                         <p class="par">Йога-студия “Motion” - это уникальное пространство, где каждый сможет найти свой
