--- a/yogastudio/price.html
+++ b/yogastudio/price.html
@@ -43,7 +43,7 @@
     <section>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-2" class="menu">
+            <div class="col-lg-2 col-md-12" class="menu">
                 <ul class="list-group list-group-flush">
                     <a class="menuu" href="price.html#group">
                         <li class="list-group-item">Групповые занятия</li>
@@ -53,7 +53,7 @@
                     </a>
                 </ul>
             </div>
-            <div class="col-lg-10" class="price">
+            <div class="col-lg-10 col-md-12" class="price">
                 <br>
                 <p class="qs">Ниже приведены цены в Москве. Если у вас есть вопросы по стоимости определённых услуг –
                     позвоните по
