--- a/yogastudio/rules.html
+++ b/yogastudio/rules.html
@@ -43,7 +43,7 @@
     <section>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-2">
+                <div class="col-lg-2 col-md-12">
                     <ul class="list-group list-group-flush">
                         <a class="menuu" href="rules.html#against">
                             <li class="list-group-item">Противопоказания</li>
@@ -53,7 +53,7 @@
                         </a>
                     </ul>
                 </div>
-                <div class="col-lg-10" class="price">
+                <div class="col-lg-10 col-md-12" class="price">
                     <a id="against"></a>
                     <h3 class="against">Противопоказания к занятиям йогой</h3>
                     <p>
