--- a/yogastudio/rules.html
+++ b/yogastudio/rules.html
@@ -43,7 +43,7 @@
     <section>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-2 col-md-12">
+                <div class="col-lg-2 col-md-12 hi">
                     <ul class="list-group list-group-flush">
                         <a class="menuu" href="rules.html#against">
                             <li class="list-group-item">Противопоказания</li>
